--- a/hatena_theme.css
+++ b/hatena_theme.css
@@ -407,7 +407,10 @@ th {
 /* Common */
 html,
 body {
-  font-family: 'Helvetica Neue', 'Helvetica', 'Arial', 'Hiragino Kaku Gothic Pro', 'Meiryo', 'MS PGothic', sans-serif;
+  /* font-family: 'Helvetica Neue', 'Helvetica', 'Arial', 'Hiragino Kaku Gothic Pro', 'Meiryo', 'MS PGothic', sans-serif; */
+
+	font: 16px/1.8 "游ゴシック", "YuGothic", "Yu Gothic", 'ヒラギノ角ゴ ProN W3', "Hiragino Kaku Gothic ProN", "Meiryo", Helvetica, Arial, sans-serif;
+
   color: #454545;
   background-color: #ffffff;
 }
@@ -499,7 +502,8 @@ a.keyword {
 }
 /* container */
 #container {
-  width: 940px;
+  /* width: 940px; */
+	width: 1105px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
@@ -522,11 +526,13 @@ a.keyword {
 }
 /* 2カラムレイアウト */
 #main {
-  width: 600px;
+  /* width: 600px; */
+	width: 730px;
   float: left;
 }
 #box2 {
-  width: 300px;
+  /* width: 300px; */
+	width: 378px;
   float: right;
 }
 /* 1カラムにしたい場合は下記のコメントアウトを外してください ----
@@ -665,8 +671,10 @@ a.keyword {
 }
 /* entry-content の中の書式 */
 .entry-content {
-  font-size: 95%;
-  line-height: 1.7;
+  /* font-size: 95%; */
+	font-size: 100%;
+  /* line-height: 1.7; */
+	line-height: 1.8;
   padding-bottom: 10px;
   border-bottom: 1px solid #dddddd;
 }
