--- a/hatena_theme.css
+++ b/hatena_theme.css
@@ -412,7 +412,7 @@ body {
 	font-family: Avenir , "Open Sans" , "Helvetica Neue" , Helvetica , Arial , Verdana , Roboto , "游ゴシック" , "Yu Gothic" , "游ゴシック体" , "YuGothic" , "ヒラギノ角ゴ Pro W3" , "Hiragino Kaku Gothic Pro" , "Meiryo UI" , "メイリオ" , Meiryo , "ＭＳ Ｐゴシック" , "MS PGothic" , sans-serif;
 
   color: #454545;
-  background-color: #ffffdd;
+  background-color: #ffffff;
 }
 a {
   color: #1487bd;
@@ -672,7 +672,7 @@ a.keyword {
 /* entry-content の中の書式 */
 .entry-content {
   /* font-size: 95%; */
-	font-size: 100%;
+	font-size: 120%;
   /* line-height: 1.7; */
 	line-height: 1.8;
   padding-bottom: 10px;
